[gd_scene load_steps=3 format=3 uid="uid://dqmhre7t6kn43"]

[ext_resource type="Script" uid="uid://bo2di7tueha7v" path="res://scenes/ui/QuestScreen.gd" id="1"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2"]

[node name="QuestScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.12, 1)

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -320.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Available" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Available"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Available/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Active" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Active"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Active/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Completed" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Completed"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Completed/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QuestDetailsPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = -20.0
offset_bottom = 250.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="QuestDetailsPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="QuestDetailsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quest Name"
horizontal_alignment = 1

[node name="Description" type="Label" parent="QuestDetailsPanel/VBox"]
layout_mode = 2
text = "Quest description..."
autowrap_mode = 3

[node name="Spacer1" type="Control" parent="QuestDetailsPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Requirements" type="Label" parent="QuestDetailsPanel/VBox"]
layout_mode = 2
text = "Requirements:"

[node name="Spacer2" type="Control" parent="QuestDetailsPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Rewards" type="Label" parent="QuestDetailsPanel/VBox"]
layout_mode = 2
text = "Rewards:"

[node name="Spacer3" type="Control" parent="QuestDetailsPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="QuestDetailsPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Göreve Başla"

[node name="ClaimButton" type="Button" parent="QuestDetailsPanel/VBox"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Ödülü Al"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "◀ Geri"
